@@ -1,3 +1,13 @@
+2009-09-15 Riccardo Mottola <rmottola@users.sf.net>
+	
+	* Headers/ProjectCenter/PCProject.h
+	* Framework/PCProject.m
+	Removed execToolName
+
+	* Framework/PCProjectLauncher.m
+	Launch executable directly without openapp/opentool and do not use
+	execToolName to determine the project type
+	
 2009-06-23 18:22-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Framework/PCProject.m
